# fluke

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  signup2.rs
backend/: .env.example  .gitignore  2  Cargo.toml  Dockerfile  README.md  Rocket.toml  sqlx-data.json
backend-axum/: Cargo.toml  README.md  sqlx-data.json
backend-axum/migrations/: 20230623004434_create_message_table.up.sql
backend-axum/src/: errors.rs  main.rs  message.rs
backend-axum/src/configuration/: mod.rs  models.rs
backend-axum/src/controllers/: message.rs  user.rs
backend-axum/src/models/: message.rs  mod.rs  user.rs
backend/.sqlx/: query-0d7768b1f47e1e437d73dbf7233b8298764015a10a5f37496eb86cb5215d53bf.json  query-117a0ee8366d9879e5d0a00db4b29a6b1fea6e0bff045536dde4e937f0efe7cc.json  query-23b09a9fad7137cd5e946593eb048e780ad0d9b3790cbd57c114639e2a8eab1a.json  query-2f1d1e222c52009e2dd4238b3cd44c489364fe7bf69b466f6b26e03db031eb39.json  query-3ce6bdf278e8e685812b7328caec5c5eff9cc3f6375cdc907b90c0006a46b016.json  query-44de2c3265a9505404ccb4636e63690f23132bf1d00ab63d384a69f39408efed.json  query-4bc77b6936bf96d58f3391d615ba910fedf7e4aa9d3150c7b3d6d24151a6dfab.json  query-5538e2d83e73cbb272770c6ddb2452d3cc69462e6e05a4b97b32014efcbfb671.json  query-59e7f6859977de398fc5c677f71104c7042d02ad5aa53e4e6aadfde463081237.json  query-646d74fd2ddcba9afc548520793eaaf56edc2955c027746381f4e48380dbd913.json  query-6eb87bdaf8181187e82b9ad12132231581133c26c73ba955046cb00882fbc786.json  query-723fe4ec62fa65eb49c22501b0e3aeb9b3ecd9e813c49e14414ff0a3da549ddf.json  query-76365a5fc70e9b1041190814dc2d84cffd36d230f0e8b95fdd8bd8e4629e9234.json  query-802a7508e7890062d2df254b24578eb9f3424df54f0412df9a6d439cb2fa452f.json  query-81dbd28a4c2d75e385ef32289d1e82acd78811d542a20eb2ed9941ec08474660.json  query-82b3b4f63eca7288d0d2d28c3442f01041851dddbc187b5415673bd833a7fcd8.json  query-838e6d71cb92539416554ddaf9e6b4f6b2ce5b7a64e31878ba95cf95d34fb792.json  query-871eb1df908f281a2a896e72fd17ce9afd372d7955514e72727c135f47cb62dc.json  query-88ed5cc57b85fbe941be9242703b1e47453a3bddb96899e2f3126760a6f6f9c3.json  query-8f5249d91e1397f4f98ece20d5f86cc5ca4539a1a173d69f63c9ddafc5595491.json  query-96640fd67bd1fcd3b8ea3c23934df75484247cedbe9c240b5583fdbead86e448.json  query-998bc35bcb6859154454019d2db2abeac24f256b0613bdf6cd5a462997b1858f.json  query-c3cb49b2ce6159033668bed871d7df83efdecd18ab310d7651e8f13b56bc2ff3.json  query-cc57b44dd5455d4c9c46e2b9997d8ee31f640e8eb9272ddfc15152f083f70175.json  query-dbc2d6f1b64de27b816ca244bb5bd243945f8c8e0c4cb1ed7f4b0957e0f4097b.json  query-dd52f3ec9f246a4b807e4c202c30890c5aaf289cb4a7389f08d4394a2b0a3e3c.json  query-dd610ff6e2c7f30a5355014f5ee9869cccf7497ec8f7bcbb0083c4ab6cba3759.json  query-ef0aff0dc86834dfaf90bb3181bc51c5ec2155470d98cf2a6a39328279236b4d.json  query-ef1ef1d0615404cd164892548c210bc461603468fa2aaf3ee6d15f02f3b7b593.json  query-ef48f1fca8daf90cea1c3feed96ae685e8a8052bc4d63127a486f3b90cbd2681.json  query-f4e4884e2c2472db793854e49d3cc6c6b755ad59037d82bc575f96ca28690357.json  query-fdf8c1579c7ee86db16d796da3571b9b79a2bc50f7b6c2447a848d5965228d9e.json
backend/migrations/: 0001_create_message_table.down.sql  0002_create_users_table.up.sql  0002_message_created_at.up.sql  0003_create_user_table.down.sql  0003_create_user_table.up.sql  0003_create_users_table.down.sql  0003_create_users_table.up.sql  0004_remove_username.down.sql  0004_remove_username_column.up.sql  20230623004434_create_message_table.down.sql  20230623004715_message_created_at.down.sql  20230628000530_remove_username.down.sql  20230628000530_remove_username.up.sql  20230804193122_create_channel_table.down.sql  20230804193122_create_channel_table.up.sql  20230804194015_add_user_to_message.down.sql  20230804194015_add_user_to_message.up.sql  20230804194616_add_user_deleted_flag.down.sql  20230804194616_add_user_deleted_flag.up.sql  20230814230137_message_cascade_delete.down.sql  20230814230137_message_cascade_delete.up.sql  20230814233410_message_updated_at.down.sql  20230814233410_message_updated_at.up.sql
backend/rocket-api/: Cargo.toml
backend/rocket-api/src/: main.rs
backend/src/: errors.rs  main.rs  messages.rs  routes.rs  user.rs  users.rs
backend/src/configuration/: mod.rs  models.rs
backend/src/controllers/: channel.rs  message.rs  user.rs
backend/src/db/: channels.rs  messages.rs  mod.rs  users.rs
backend/src/models/: channel.rs  message.rs  mod.rs  user.rs
backend/src/queries/: channels.rs  messages.rs  mod.rs  users.rs
backend/src/tests/: mod.rs
backend/static/: 404.html  fluke_website-8c610b5c5924e536.js  fluke_website-8c610b5c5924e536_bg.wasm  index-13183d471f89e62.css  index.html
common/: Cargo.toml
database/: .gitignore  pg_hba.conf  postgresql.conf  run_postgres.sh
dev/: Dockerfile  docker-compose.yml
frontend/: .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.css  index.html  index.scss  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  app.rs  index.css  landing.rs  main.rs  main.tsx  router.rs  store.rs  theme.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/api/: message_api.rs  mod.rs  types.rs  user_api.rs
frontend/src/components/: ChannelSelector.tsx  Header.tsx  LoginForm.tsx  MainContainer.tsx  MessageDisplay.tsx  SignupForm.tsx  button.rs  channels_list.rs  form_input.rs  header.rs  input.rs  loading_button.rs  message_panel.rs  messages_list.rs  mod.rs  nav.rs  navbar.rs  signup.rs  spinner.rs
frontend/src/composables/: messages.rs  useFetch.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: ChannelPage.tsx  LoginPage.tsx  SignupPage.tsx  about_page.rs  home_page.rs  list_page.rs  login_page.rs  messages_page.rs  mod.rs  profile_page.rs  register_page.rs
frontend/src/styles/: index.css
frontend/src/utils/: callbacks.rs
frontend/src/views/: about.rs  home.rs  login.rs  mod.rs  signup.rs
frontend/styles/: index.scss  tailwind.css
frontend/yew-ui/: index.html
rocket-api/: Cargo.toml
scripts/: serve.sh
ui/: main.rs
(+6 files in other folders)
