[package]
name = "backend-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
dotenvy = "0.15.7"

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.68"

sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "offline"]}
chrono = { version = "0.4.26", features = ["serde"] }