[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.7.7", features = ["cookie"] }
tokio = { version = "1.32.0", features = ["full"] }
argon2 = "0.5.1"

dotenvy = "0.15.7"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "postgres", "chrono", "json", "time", "macros" ] }
chrono = { version = "0.4.26", features = ["serde"] }
tower = {version = "0.4.13", features = ["full"] }
tower-http = {version = "0.4.3", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

jwt = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.9"

time = "0.3"

uuid = { version = "1.4", features = ["serde"] }

# Utility Crates
anyhow = "1.0.75"
async-trait = "0.1.73"
dotenv = "0.15.0"
env_logger = "0.9.3"
itertools = "0.10.5"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.47"
