[package]
name = "fluke_website"
version = "0.1.0"
edition = "2021"
description = "Frontend for Flunk Website"
readme = "README.md"
repository = "https://github.com/LukeBrandon/fluke"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
log = "0.4.6"
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
wasm-logger = "0.2"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
wasm-bindgen-futures = "0.4"
serde = "1.0.152"
serde_json = "1.0.94"
gloo-net = "0.2.6"
