[package]
name = "fluke-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# Core
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }

# web-assembly
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4.20"
serde_json = "1.0.105"
gloo-net = {"0.4", features=["http"]}
js-sys = "0.3.64"
serde-json-wasm = "1.0.0"
dotenvy = "0.15.7"
yew_icons = {version = "0.7", features = ["FontAwesomeSolidBars"]}
yewdux = "0.9.3"
validator = { version = "0.16.1", features = ["derive"] }
gloo = "0.10.0"
lazy_static = "1.4.0"
regex = "1.9.3"
# utility

[workspace]
members = ["src-tauri"]
