[package]
name = "Fluke"
version = "0.1.0"
description = "A privacy-first chat client."
license = "MIT or Apache"
repository = "https://github.com/LukeBrandon/fluke"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
